@@ -12,6 +12,7 @@
     Move ::Util code into ::Base
     use Class::Accessor::Fast to generate accessors
     combine user/pass lookup into single SQL query (one less query per request)
+    add get_config() for fetching config values
 
 Release 0.90
     changed LICENSE information in README removed "same terms as perl" and be
